--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+language: generic
 sudo: required
 services:
   - docker
 
 before_install:
-  - docker build - t habrich001/react-test -f ./client/Dockerfile.dev ./client
+  - docker build - t habrich001/react-test -f ./client/Dockerfile.dev ./client .
 
 script:
   - docker run -e CI=true USERNAME/react-test npm test -- --coverage
