--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build - t habrich001/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test -- --coverage
+  - docker run -e CI=true habrich001/react-test npm test -- --coverage
 
 after_success:
   - docker build -t habrich001/multi-client ./client
